# gitmsg

./: README.md  package.json  setup.cfg  setup.py
scripts/: gitmsg
tests/gitmsg/examples/: .init.sh
tests/gitmsg/examples/+new_filename/: run.sh
tests/gitmsg/examples/-deleted_filename/: run.sh
tests/gitmsg/examples/^modified_file/: test.sh
tests/gitmsg/examples/init/: init.sh
