[metadata]
name = gitmsg
version = 2018.11.19
url = https://github.com/looking-for-a-job/gitmsg
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = git

[options]
install_requires = 
	setuptools
scripts = 
	scripts/gitmsg
